# evalt

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SKILL.md  build.rs  config.evalt.schema.json  evalt.schema.json  mise.toml
examples/: advanced.eval.yaml  basic.eval.yaml  carwash.eval.yaml  global.eval.yaml  timeout.eval.yaml
examples/fixtures/: todo.txt
src/: engine.rs  main.rs  service.rs  utils.rs
src/harness/: mod.rs  pi.rs
src/output/: json.rs  mod.rs
src/output/terminal/: drawer.rs  mod.rs
src/sandbox/: cage.rs  mod.rs
src/types/: cli.rs  harness.rs  mod.rs  test.rs  testresult.rs
src/types/assertion_impls/: display.rs  mod.rs
src/types/config/: mod.rs  stack.rs
src/types/yaml_spec/: assertions.rs  config.rs  mod.rs  operations.rs  testfile.rs
